# sequences

./: .appveyor.yml  .clang-tidy  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py
.conan/: build.py
.conan/test_package/: test_package.cpp
.github/workflows/: clang-format.yml  clang-tidy.yml  linux.yml  macos.yml  windows.yml
include/tao/seq/: accumulate.hpp  at_index.hpp  concatenate.hpp  config.hpp  contains.hpp  cum_prod.hpp  difference.hpp  exclusive_scan.hpp  filter_out_seq.hpp  first.hpp  fold.hpp  functional.hpp  head.hpp  inclusive_scan.hpp  index_of.hpp  index_of_seq.hpp  integer_sequence.hpp  is_all.hpp  is_any.hpp  last.hpp  make_integer_range.hpp  make_integer_sequence.hpp  map.hpp  max.hpp  min.hpp  minus.hpp  multiplies.hpp  multiply.hpp  partial_accumulate.hpp  partial_fold.hpp  partial_prod.hpp  partial_reduce.hpp  partial_sum.hpp  permutate.hpp  permute.hpp  plus.hpp  prod.hpp  prod_red.hpp  reduce.hpp  reverse.hpp  (+12 more)
src/test/seq/: CMakeLists.txt  accumulate.cpp  at_index.cpp  concatenate.cpp  contains.cpp  contrib_index_of_seq.cpp  contrib_permutate.cpp  contrib_sort_index.cpp  cum_prod.cpp  difference.cpp  exclusive_scan.cpp  filter_out_seq.cpp  fold.cpp  head.cpp  inclusive_scan.cpp  index_of.cpp  index_of_seq.cpp  integer_sequence.cpp  is_all.cpp  is_any.cpp  last.cpp  make_integer_range.cpp  make_integer_sequence.cpp  map.cpp  max.cpp  min.cpp  minus.cpp  multiplies.cpp  multiply.cpp  partial_accumulate.cpp  partial_fold.cpp  partial_sum.cpp  permutate.cpp  permute.cpp  plus.cpp  (+15 more)
travisci/: install-cuda-xenial.sh
(+4 files in other folders)
